2007-10-26  Roland Mas  <lolando@debian.org>

	* www/tracker/admin/form-extrafieldcopy.php: Use the role_settings
	table instead of the artifact_perm view.

2007-10-25  Roland Mas  <lolando@debian.org>

	* www/pm/msproject/msp.php: Use the role_settings table instead of
	the project_perm view.

	* www/tracker/mod.php: Ditto for artifact_perm.

2007-09-24  Roland Mas  <lolando@debian.org>

	* common/include/Role.class.php: Removed code that made use of the
	forum_perm, project_perm and artifact_perm tables.
	* common/include/Group.class.php: Ditto.
	* common/include/User.class.php: Ditto.

	* common/forum/Forum.class.php: Use the permissions stored in the
	role for forums, rather than depending on a redundant table.
	* common/forum/ForumFactory.class.php: Ditto.

	* common/pm/ProjectGroup.class.php: Use the permissions stored in the
	role for subprojects, rather than depending on a redundant table.
	* common/pm/ProjectGroupFactory.class.php: Ditto.

	* common/tracker/ArtifactType.class.php: Use the permissions
	stored in the role for trackers, rather than depending on a
	redundant table.
	* common/tracker/ArtifactTypeFactory.class.php: Ditto.

	* db/20070924-forum-perm.sql: Removed the forum_perm table,
	replaced it with a view behaving similarly (for backwards
	compatibility)
	* db/20070924-project-perm.sql: Likewise, for project_perm.
	* db/20070924-artifact-perm.sql: Likewise, for artifact_perm.
	* deb-specific/db-upgrade.pl: Use these new files.

2007-07-06 Christian Bayle <bayle@debian.org>
	* Made cosmetic changes in sub sub menu to display Admin when possible
	(still need some work)
	* Removed various warning when error_reporting( E_ALL ); for unset
	variables

2007-06-24 Christian Bayle <bayle@debian.org>
	* Massive renaming of .class in .class.php
	* This will ease to develop with IDE like eclipse
	* It may be some side effect of automation I used to do this

2006-10-04 Christian Bayle <bayle@debian.org>