@@ -7,9 +7,6 @@ delete from project_messages where posted_by in
 delete from user_group where user_id in 
 (select user_id  from users where status='D');
 
-delete from artifact_perm where user_id in 
-(select user_id  from users where status='D');
-
 delete from artifact_history where artifact_id in (select artifact_id from artifact where assigned_to in
 (select user_id  from users where status='D'));
 
@@ -27,12 +24,6 @@ delete from artifact where assigned_to in
 (select user_id  from users where status='D');
 
 delete from artifact where submitted_by in
-(select user_id  from users where status='D');
-
-delete from project_perm where user_id in
-(select user_id  from users where status='D');
-
-delete from forum_perm where user_id in
 (select user_id  from users where status='D');
 
 delete from users where status='D';
